# django-unicorn-playground

./: README.md  conftest.py  justfile  pyproject.toml
.github/: FUNDING.yml
django_unicorn_playground/: __init__.py  cli.py  components.py  main.py
examples/: counter.py
src/django_unicorn_playground/: cli.py  components.py  main.py  settings.py  urls.py  views.py
src/django_unicorn_playground/html/: django.py  unicorn.py
src/django_unicorn_playground/templates/: base.html  index.html
src/django_unicorn_playground/templates/unicorn/: counter.html
tests/: fake_components.py  urls.py
tests/cli/: test_cli.py
tests/components/: test_get_component_classes.py
tests/html/django/: test_variable.py
tests/html/unicorn/: test_action.py
tests/main/: test_configure.py  test_init.py  test_runserver.py
tests/settings/: test_get_components_setting.py  test_get_settings.py  test_get_templates_setting.py
tests/templates/unicorn/: bad-fake-view.html  fake-view.html
tests/views/: test_get_default_index_template_html.py  test_index.py
